# substack-ops

./: .dockerignore  .env.example  .gitignore  .mcpbignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  glama.json  manifest.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
examples/: PROMPTS.md
src/substack_ops/: __init__.py  audit.py  auth.py  auth_chrome.py  auth_otp.py  cli.py  client.py  dedup.py  llm.py  llm_subprocess.py
src/substack_ops/_substack/: __init__.py  _http.py  auth.py  category.py  newsletter.py  post.py  user.py
src/substack_ops/auto/: __init__.py  engine.py  presets.yaml
src/substack_ops/mcp/: __init__.py  install.py  server.py
src/substack_ops/reply_engine/: __init__.py  ai_auto.py  ai_bulk.py  ai_review.py  base.py  template.py
src/substack_ops/templates/: thanks.yaml
src/substack_ops/tui/: __init__.py  app.py
tests/: test_audit.py  test_auth.py  test_auto_engine.py  test_client_http.py  test_dedup.py  test_engagement.py  test_llm_subprocess.py  test_mcp_install.py  test_mcp_propose_confirm.py  test_mcp_server.py  test_reply_engine.py
